--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,9 @@
 
     <string name="text_hint"><b>Search Latest News...</b></string>
 
-    <!-- Strings related to login -->
+    <!-- part of Cuong-->
+    <string name="login_email_hint">Email</string>
+    <string name="login_password_hint">Password</string>
+    <string name="facebook_app_id">633479650655349</string>
+    <string name="fb_login_protocol_scheme">fb633479650655349</string>
 </resources>
